# PatnicRoom

./: README.md  VSCode Snippets.json  project.godot  project.godot~RF7015310.TMP  workspaceSettings.code-workspace  zeig ma
Documentation/: JSON Convention.md  StyleConvention.md  _Entity Summary.md  todo-txt  webside
Documentation/Gamedesign/: Ancient Engines.md  DioJSONes  boookmarks.md  dioJSONes.txt  introduction to add content.json  quickreferences.json
Documentation/Modules/: 000_Basic Tile Atlas.txt
Documentation/Syntax/: Effect.md
Documentation/Webside/: About.html  Blogpost.html  ContactUs.html  Docs.html  Home.html  Patch.html  Team.html
Documentation/statistics/: Kitparts.json  components.json  kitparts.md
Gamedata/Anatomy/: antropomorphic.json
Gamedata/Factions/: the_drop_outz.json
Media/: panicroom.PNG.import
Media/FixedDays Font/: Text_Header.tres  new_dynamicfontdata.tres
Media/TileMap/: 06_debug.json  SuburbanTestSide.json  devroom.json  dummy.json
Media/Tilesets/: all.tres
Src/: Gameloop.gd  test.tscn
VSCodeSetup/: ReadMe.txt  setupCustomeSettings.sh
Workspaces/DevCLI/Cargo/: Cargo.toml
Workspaces/DevCLI/Cargo/src/: backup_menue.rs  config_splitter.rs  distributer_menue.rs  main.rs  main_menue_printer.rs  main_menue_printer.rs~  manager_menue.rs  mongoDB_menue.rs  publisher_menue.rs  synchronicer_menue.rs  terminal_formatter.rs
config/: DynamicSubtitle.json  antropomorphic.json  knownComponents  known_Conditions.json  upper_leg.json
docs/: mkdocs.yml
test/: test.md  test.tscn
tools/: debugKitsAtStart.json
(+3385 files in other folders)
